cmake_minimum_required(VERSION 3.20)
project(bm_total)

set(CMAKE_CXX_STANDARD 14)

add_executable(bm_total main.cpp bm4/Solution.h bm5/Solution.h bm6/Solution.h bm7/Solution.h bm8/Solution.h bm9/Solution.h bm10/Solution.h bm11/Solution.h bm1/Solution.h bm12/Solution.h bm13/Solution.h bm14/Solution.h bm15/Solution.h bm16/Solution.h bm17/Solution.h bm18/Solution.h bm19/Solution.h bm20_/Solution.h bm21/Solution.h bm26/Solution.h bm27/Solution.h bm28/Solution.h bm30/Solution.h bm29/Solution.h bm31/Solution.h bm32/Solution.h bm33/Solution.h bm34/Solution.h bm35/Solution.h bm47/Solution.h bm48/Solution.h bm71/Solution.h bm78/Solution.h bm79/Solution.h bm81/Solution.h bm82/Solution.h bm83/Solution.h bm84/Solution.h bm91/Solution.h bm96/Solution.h)
